<resources>
    <string name="main_cryogenic_fluid_properties_button">Cryogenic Fluid Properties</string>
    <string name="main_heat_flow_calc_button">Heat Flow</string>
    <string name="main_thermal_conductivity_button">Thermal Conductivity</string>
    <string name="main_specific_heat_button">Specific Heat</string>
    <string name="main_young_modulus_button">Young\'s Modulus</string>
    <string name="main_linear_expansion_button">Linear Expansion</string>
    <string name="main_expansion_coefficient_button">Expansion Coefficient</string>
    <string name="app_name">CryoCalc</string>
    <string name="about">.. About ..</string>
    <string name="exit">.. Exit ..</string>
    <string name="properties_notes_text">"* at boiling point \n ** at melting point"</string>
    <string name="cryogenic_properties">"Fluid properties:"</string>
    <string name="select_fluid">"Select fluid"</string>
    <string name="HE3">"<sup><small><small>3</small></small></sup>He"</string>
    <string name="HE4">"<sup><small><small>4</small></small></sup>He"</string>
    <string name="p_H2">"p-H<sub><small><small>2</small></small></sub>"</string>
    <string name="n_H2">"n-H<sub><small><small>2</small></small></sub>"</string>
    <string name="Ne">"Ne"</string>
    <string name="N2">"N<sub><small><small>2</small></small></sub>"</string>
    <string name="O2">"O<sub><small><small>2</small></small></sub>"</string>
    <string name="thermal_conductivity_input_text">Temperature</string>
    <string name="thermal_conductivity_output_text">"Thermal Conductivity \n (W/(m-K))"</string>
    <string name="aluminum_1100">"Aluminum 1100"</string>
    <string name="aluminum_3003f_5083_6061T6">"Aluminum \n<small><small>"(3003F, 5083, 6061-T6)"</small></small></string>
    <string name="aluminum_3003f">"Aluminum 3003F"</string>
    <string name="aluminum_5083">"Aluminum 5083"</string>
    <string name="aluminum_6061_T6">"Aluminum 6061-T6"</string>
    <string name="aluminum_6063_T5">"Aluminum 6063-T5"</string>
    <string name="apiezon_n">"Apiezon N"</string>
    <string name="balsa_density_6">"Balsa <small><small>(@ density 6 lb/ft<small><sup>3</sup></small>)</small></small>"</string>
    <string name="balsa_density_11">"Balsa <small><small>(@ density 11 lb/ft<small><sup>3</sup></small>)</small></small>"</string>
    <string name="beryllium">Beryllium</string>
    <string name="beryllium_a_axis">Beryllium \n<small><small>(//a-axis)</small></small></string>
    <string name="beryllium_c_axis">Beryllium \n<small><small>(//c-axis)</small></small></string>
    <string name="beryllium_polyscrystalline">Beryllium \n<small><small>(Polycrystalline)</small></small></string>
    <string name="beechwood_phenolic_cross_laminate_grain_direction">Beechwood-Phenolic \n<small><small>(cross-laminate [0/90], grain direction)</small></small></string>
    <string name="beechwood_phenolic_cross_laminate_flatwise">Beechwood-Phenolic \n<small><small>(cross-laminate [0/90], flatwise)</small></small></string>
	<string name="beechwood_phenolic_unidirectional_flatwise">Beechwood-Phenolic \n<small><small>(unidirectional, flatwise)</small></small></string>
	<string name="beechwood_phenolic_unidirectional_grain_direction">Beechwood-Phenolic \n<small><small>(unidirectional, grain direction)</small></small></string>
	<string name="beryllium_copper">Beryllium Copper</string>
    <string name="brass">Brass</string>
    <string name="copper">Copper</string>
    <string name="copper_RRR_50">Copper <small><small>(RRR = 50)</small></small></string>
    <string name="copper_RRR_100">Copper <small><small>(RRR = 100)</small></small></string>
    <string name="copper_RRR_150">Copper <small><small>(RRR = 150)</small></small></string>
    <string name="copper_RRR_300">Copper <small><small>(RRR = 300)</small></small></string>
    <string name="copper_RRR_500">Copper <small><small>(RRR = 500)</small></small></string>
    <string name="fiberglass_epoxy">Fiberglass Epoxy"</string>
    <string name="fiberglass_epoxy_normal_direction">Fiberglass Epoxy \n<small><small>(Normal Direction)</small></small></string>
    <string name="fiberglass_epoxy_warp_direction">Fiberglass Epoxy \n<small><small>(Warp Direction)</small></small></string>
    <string name="glass_fabric_polyester_helium_warp_direction">Glass Fabric - Polyester \n<small><small>(Helium, Warp Direction)</small></small></string>
    <string name="glass_fabric_polyester_nitrogen_warp_direction">Glass Fabric - Polyester \n<small><small>(Nitrogen, Warp Direction)</small></small></string>
    <string name="glass_fabric_polyester_nitrogen_normal_direction">Glass Fabric - Polyester \n<small><small>(Nitrogen, Normal Direction)</small></small></string>
    <string name="glass_fabric_polyester_normal_direction">Glass Fabric - Polyester \n<small><small>(Normal Direction)</small></small></string>
    <string name="glass_fabric_polyester_warp_direction">Glass Fabric - Polyester \n<small><small>(Warp Direction)</small></small></string>
    <string name="glass_mat_epoxy_chopped_strand_mat">Glass mat-epoxy \n<small><small>(chopped strand mat)</small></small></string>
    <string name="glass_mat_epoxy_continuous_strand">Glass mat-epoxy \n<small><small>(continuous strand)</small></small></string>
    <string name="indium">Indium</string>
    <string name="inconel_718">Inconel 718</string>
    <string name="invar_fe36ni">Invar <small><small>(Fe-36Ni)</small></small></string>
    <string name="kevlar_49_fiber">Kevlar 49 Fiber</string>
    <string name="kevlar_49_composite">Kevlar 49 Composite</string>
    <string name="kevlar_49">Kevlar 49</string>
    <string name="lead">Lead</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="nickel_steel_fe225ni_fe325ni_fe50ni_fe90ni">Nickel Steel \n<small><small>(Fe-2.25 Ni, Fe-3.25 Ni, Fe-5.0 Ni, Fe-9.0 Ni)</small></small></string>
    <string name="nickel_steel_fe225ni">Nickel Steel <small><small>(Fe-2.25 Ni)</small></small></string>
    <string name="nickel_steel_fe325ni">Nickel Steel <small><small>(Fe-3.25 Ni)</small></small></string>
    <string name="nickel_steel_fe50ni">Nickel Steel <small><small>(Fe-5.0 Ni)</small></small></string>
    <string name="nickel_steel_fe90ni">Nickel Steel <small><small>(Fe-9.0 Ni)</small></small></string>
    <string name="platinum">Platinum</string>
    <string name="polyamide_nylon">Polyamide <small><small>(Nylon)</small></small></string>
    <string name="polyethylene_terephthalate_mylar">Polyethylene Terephthalate <small><small>(mylar)</small></small></string>
    <string name="polyimide_kapton">Polyimide <small><small>(Kapton)</small></small></string>
    <string name="polystyrene_density_99_point_96">Polystyrene \n<small><small>(@ density 99.96 kg/m<small><sup>3</sup></small> (=6.24 lb/ft<small><sup>3</sup></small>) )</small></small></string>
    <string name="polystyrene_density_9_point_93">Polystyrene \n<small><small>(@ density 9.93 kg/m<small><sup>3</sup></small> (=.062 lb/ft<small><sup>3</sup></small>) )</small></small></string>
    <string name="polystyrene_density_60_point_07">Polystyrene \n<small><small>(@ density 60.07 kg/m<small><sup>3</sup></small> (=3.75 lb/ft<small><sup>3</sup></small>) )</small></small></string>
    <string name="polystyrene_density_31_point_88">Polystyrene \n<small><small>(@ density 31.88 kg/m<small><sup>3</sup></small> (=1.99 lb/ft<small><sup>3</sup></small> freon filled) )</small></small></string>
    <string name="polystyrene_density_32_point_04">Polystyrene \n<small><small>(@ density 32.04 kg/m<small><sup>3</sup></small> (=2 lb/ft<small><sup>3</sup></small>) )</small></small></string>
    <string name="polystyrene_density_49_point_98">Polystyrene \n<small><small>(@ density 49.98 kg/m<small><sup>3</sup></small> (=3.12 lb/ft<small><sup>3</sup></small>) )</small></small></string>
    <string name="polystyrene_density_51_point_42_temperature_range_in_kelvin_4_to_105">Polystyrene \n<small><small>(@ density 51.42 kg/m<small><sup>3</sup></small> (=3.21 lb/ft<small><sup>3</sup></small>), temperature range= 4°K - 105°K )</small></small></string>
    <string name="polystyrene_density_51_point_42_temperature_range_in_kelvin_105_to_278">Polystyrene \n<small><small>(@ density 51.42 kg/m<small><sup>3</sup></small> (=3.21 lb/ft<small><sup>3</sup></small>), temperature range= 105°K - 278°K ) )</small></small></string>
    <string name="calculate">"Calculate"</string>
    <string name="expansion_coefficient_equation">"Linear expansion equation:"</string>
    <string name="temperature_with_kelvin">t (K)</string>
    <string name="material">Material</string>
    <string name="select_material">Select material</string>
    <string name="about_cryocalc_text">CryoCalc is developed by CryoVac.
        CryoCalc is an application for cryogenic properties.\n
        <b>Reference\n</b>
        *Cryogenic fluid properties are based from <i>Tieftemperaturtechnologie</i> book 
        (ISBN 3184005038, 9783184005030).\n
        *Calculation method and material data for the following calculations: \n
        - thermal conductivity, \n
        - specific heat, \n
        - young\'s modulus, \n
        - linear expansion, and \n
        - expansion coefficient. \n
        are based from the Cryogenic Technologies Group for the 
        National Institute of Standards and Technology (NIST) database 
     	which is available in the following link
        </string>
      <string name="nist_website">cryogenics.nist.gov</string>
      <string name="cryovac_website">www.cryovac.de</string>
      <string name="by_cryovac">by CryoVac</string>
     <string name="about_cryocalc_title">CryoCalc 1.0</string>
     <string name="about_cryovac_title">CryoVac GmbH &amp; Co KG</string>
     <string name="about_cryovac_text">
         CryoVac Gesellschaft für Tieftemperaturtechnik mbH &amp; Co KG resp. Cryovac low temperature technologies inc. 
         was founded in January 1975 in Troisdorf near Cologne, Germany. Its purpose was and still remains to be the 
         development and manufacturing of cryogenic and vacuum equipment for research and industrial applications. \n \n

		Nowadays, as a result of 25 years of building the widest range of cryogenic and vacuum components, 
		Cryovac instruments and plants which are in operation in numerous laboratories across Europe have 
		firmly established our reputation for high quality.\n \n

	Our current product range (excerpt):\n
    - Helium Bath Cryostats \n
    - KONTI* Cryostats \n
    - Closed Cycle Refrigerators\n
    - Portable and Larger <sup><small><small>3</small></small></sup>He Cryostats\n
    - Lines and Transfer Tubes for Liquified Gasses\n
    - Cryopumps\n
    - Temperature Measurement, Control Instruments and Temp. Sensors\n
    - Helium Recovery Systems \n
	 <small>*continuous flow </small> \n \n
	 
	In addition, CryoVac offers a range of low temperature equipment from reliable manufacturers 
	- standalone instruments as well as parts of larger cryogenic plants such as:\n
    - Superconducting Magnets and Control Units \n
    - Cryogenic Liquid Level Meters and Controllers \n
    - Cryogenic Equipment \n
    - Vacuum Equipment  \n \n

	CryoVac\'s R &amp; D department is ready to help you in solving your particular cryogenic problem, 
	no matter if it is the dimensioning of a transfer line, the performing of a thermal study for an industrial plant, 
	the designing of a turn-key automatic cryogenic measurement system or any other cryogenic or vacuum project. \n \n

	From the beginning CryoVac\'s particular skill was the development and manufacturing of custom designed cryogenic 
	and vacuum systems of highest quality and so will be in the future... \n \n
	
	Contact:\n
	CryoVac GmbH &amp; Co KG \n
	Heuserweg 14 \n
	D-53842 Troisdorf \n 
	Fone: +49 (0) 2241 84673-0 \n
	Fax: +49 (0) 2241 84 673-29 \n 
	
	Website 
    </string>
</resources>