<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
	      android:layout_width="fill_parent"   
	      android:layout_height="fill_parent" >
	    <LinearLayout 
	            android:layout_width="fill_parent"   
	            android:layout_height="wrap_content" 
	            android:orientation="vertical">
	        <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@color/white"/> 
	        	<TextView
		            android:text="@string/about_cryocalc_title"
		            android:layout_width="fill_parent"
		            android:padding="10dp"
		            android:textSize="16sp"
		            android:textStyle="bold"
			        android:layout_height="wrap_content" />

	        	<TextView
	        	    android:layout_width="fill_parent"
	        	    android:layout_height="wrap_content"
	        	    android:contentDescription="@string/app_name"
	        	    android:paddingLeft="10dp"
	        	    android:paddingRight="10dp"
	        	    android:text="@string/about_cryocalc_text"
	        	    android:textSize="14sp" />

		   		 <TextView
				    android:layout_height="wrap_content"
				    android:layout_width="fill_parent"
				    android:autoLink="web"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingBottom="10dp"
				    android:text="@string/nist_website"
				    android:textSize="14sp"/>
	   		        <View android:layout_width="fill_parent" android:layout_height="2dp" android:background="@color/white"/>
	        <TextView
	            android:text="@string/about_cryovac_title"
	            android:layout_width="fill_parent"
	            android:padding="10dp"
	            android:textSize="16sp"
	            android:textStyle="bold"
		        android:layout_height="wrap_content" />   
	        <TextView
	        	android:text="@string/about_cryovac_text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp"
		        android:contentDescription="@string/app_name"
		        android:textSize="14sp"
		        />
	   		 <TextView
			    android:layout_height="wrap_content"
			    android:layout_width="fill_parent"
			    android:autoLink="web"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp"
			    android:paddingBottom="10dp"
			    android:text="@string/cryovac_website"
			    android:textSize="14sp"/>
	   		<ImageView
	       	 	android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:contentDescription="@string/app_name"
	       	 	android:scaleType="fitCenter"
	        	android:id="@+id/about_top_banner"
	        	android:src="@drawable/logo_splash" />
	    </LinearLayout>
    </ScrollView>
</LinearLayout>